--- a/home.html
+++ b/home.html
@@ -105,7 +105,9 @@
       <div class="search">
         <h1>Regal Marketing</h1>
         <p>
-          Here you go We are deals in all Society you can find all societies
+          The fastest growing real estate company providing budget-friendly
+          investment opportunities through market experts and property
+          consultants
         </p>
       </div>
     </header>
@@ -146,36 +148,22 @@
     <!--Our Work Section-->
     <section class="work">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>Featured</span> Projects
-        </h1>
-        <p data-aos="fade-up">Ultra modern and cost effective projects</p>
+        <h1 class="section-heading"><span>Featured</span> Projects</h1>
+        <p>Ultra modern and cost effective projects</p>
         <div class="card-wrapper">
           <div
             class="card"
             data-aos="zoom-in"
-            onclick="location.href='projects/regal-emporium.html'"
+            onclick="location.href='projects/silver-city-islamabad.html'"
           >
             <div class="overlay">
-              <span>Regal Emporium</span>
-              <a href="projects/regal-emporium.html"
-                >Park View City Islamabad</a
-              >
+              <span>Silver City Islambad</span>
+              <a href="projects/silver-city-islamabad.html">Islamabad</a>
             </div>
-            <img src="images/featured-product-1.jpg" alt="" />
-          </div>
-          <div
-            class="card"
-            data-aos="zoom-in"
-            onclick="location.href='projects/sports-valley.html'"
-          >
-            <div class="overlay">
-              <span>Blue World Sports Valley</span>
-              <a href="projects/sports-valley.html"
-                >Chakri Interchange Islamabad</a
-              >
-            </div>
-            <img src="images/featured-product-2.jpg" alt="" />
+            <img
+              src="images/project/thumbnail/silver-city-islamabad.jpg"
+              alt=""
+            />
           </div>
           <div
             class="card"
@@ -186,7 +174,26 @@
               <span>New Metro City</span>
               <a href="projects/new-metro-city.html">Gujar Khan</a>
             </div>
-            <img src="images/featured-product-3.jpg" alt="" />
+            <img
+              src="images/project/thumbnail/new-metro-city-gujar-khan.jpg"
+              alt=""
+            />
+          </div>
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href='projects/blue-world-sports-valley-islamabad.html'"
+          >
+            <div class="overlay">
+              <span>Blue World Sports Valley</span>
+              <a href="projects/blue-world-sports-valley-islamabad.html"
+                >Chakri Interchange Islamabad</a
+              >
+            </div>
+            <img
+              src="images/project/thumbnail/blue-world-sports-valley.jpg"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -267,10 +274,11 @@
               <i class="fab fa-whatsapp"></i>
             </div>
             <!-- <img src="images/expert-opinions.png" alt="" data-aos="ease-out" /> -->
-            <h2>Expert Opinions</h2>
+            <h2>Monitoring Services</h2>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              It is a base line package which focus on reducing the recurring
+              expenditure of monitoring and surveillance of any indoor or
+              outdoor premises.
             </p>
           </div>
         </div>
