--- a/products&services.html
+++ b/products&services.html
@@ -25,19 +25,20 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header style="background-image: url('images/about.png'); height: 600px">
-      <nav id="navbar">
+    <header style="background-image: url('images/new-header-2.png')">
+      <nav class="sticky">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
           <i class="fas fa-bars" onclick="showMenu()"></i>
         </label>
-        <a href="home.html"
-          ><img
-            src="images/logo-secondary.png"
+        <a href="home.html">
+          <img
+            src="images/logo.png"
             id="logo"
             class="logo"
             data-aos="zoom-out"
-        /></a>
+          />
+        </a>
         <ul id="menu">
           <li data-aos="zoom-out">
             <a href="about.html">About Us</a>
@@ -88,11 +89,16 @@
           </li>
           <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
-          <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
+          <li data-aos="zoom-out">
+            <a href="contact.html">Contact</a>
+          </li>
         </ul>
       </nav>
-      <div class="about-us">
-        <h1 data-aos="fade-up">Products & Services</h1>
+      <div class="search">
+        <h1>Regal Marketing</h1>
+        <p>
+          Here you go We are deals in all Society you can find all societies
+        </p>
       </div>
     </header>
 
