--- a/about.html
+++ b/about.html
@@ -25,19 +25,20 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header style="background-image: url('images/about.png'); height: 600px">
-      <nav id="navbar">
+    <header style="background-image: url('images/new-header-2.png')">
+      <nav class="sticky">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
           <i class="fas fa-bars" onclick="showMenu()"></i>
         </label>
-        <a href="home.html"
-          ><img
-            src="images/logo-secondary.png"
+        <a href="home.html">
+          <img
+            src="images/logo.png"
             id="logo"
             class="logo"
             data-aos="zoom-out"
-        /></a>
+          />
+        </a>
         <ul id="menu">
           <li data-aos="zoom-out">
             <a href="about.html" style="color: #f9ae41">About Us</a>
@@ -89,20 +90,19 @@
           <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <div class="about-us">
-        <h1 data-aos="fade-up">About Regal</h1>
+      <div class="search">
+        <h1>Regal Marketing</h1>
+        <p>
+          Here you go We are deals in all Society you can find all societies
+        </p>
       </div>
     </header>
 
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>Who</span> we Are
-        </h1>
-        <p data-aos="fade-up">
-          Are you informed? More news more often move closer to the world
-        </p>
+        <h1 class="section-heading"><span>Who</span> we Are</h1>
+        <p>Are you informed? More news more often move closer to the world</p>
         <div class="container flex items-center">
           <div class="flex-1">
             <img
@@ -113,10 +113,8 @@
             />
           </div>
           <div class="flex-1">
-            <h1 class="news-title" data-aos="fade-bottom">
-              WE HAVE MORE THAN 7 YEARS OF EXPERIENCE
-            </h1>
-            <p class="news-body" data-aos="fade-bottom">
+            <h1 class="news-title">WE HAVE MORE THAN 7 YEARS OF EXPERIENCE</h1>
+            <p class="news-body">
               Regal Marketing Network is among the fastest-growing marketing
               network around the world having its offices in many cities of
               Pakistan and also worldwide agents. The company deals in all
@@ -139,19 +137,19 @@
     </section>
 
     <!--Our CEO Message Section-->
-    <section class="ceo-msg" data-aos="fade-up">
+    <section class="ceo-msg">
       <div class="container">
         <div class="card-wrapper">
           <div class="card flex" data-aos="zoom-in">
             <div class="img-wrapper flex-1">
-              <img src="images/team-1.png" />
+              <img src="images/ceo.jpeg" />
             </div>
             <div class="card-content flex-1">
               <a href="#">
-                <h1 data-aos="fade-up">CEO Message</h1>
+                <h1>CEO Message</h1>
               </a>
-              <span data-aos="fade-up">Irfan Rafiq</span>
-              <p data-aos="fade-up">
+              <span>Irfan Rafiq</span>
+              <p>
                 Progress for me has never been a fantasy. It has always been an
                 aloof reality and once one landmark is achieved, there is always
                 another one waiting to be crossed. It is with this belief that I
@@ -166,10 +164,10 @@
           <div class="card flex" data-aos="zoom-in">
             <div class="card-content flex-1">
               <a href="#">
-                <h1 data-aos="fade-up">MD Message</h1>
+                <h1>MD Message</h1>
               </a>
-              <span data-aos="fade-up">Shahzaib Khan</span>
-              <p data-aos="fade-up">
+              <span>Shahzaib Khan</span>
+              <p>
                 Over the span of time, we have developed an organized structure
                 to manage our business set-ups competently. This has given us an
                 edge over our competitors and made us a better market player.
@@ -242,14 +240,10 @@
         </p>
         <div class="teams">
           <div class="team" data-aos="zoom-in">
-            <img
-              src="images/marketing-manager.png"
-              alt=""
-              data-aos="ease-out"
-            />
-            <div class="name" data-aos="fade-up">Shahroz Iqbal</div>
-            <div class="desig" data-aos="fade-up">Marketing Manager</div>
-            <div class="about" data-aos="fade-up">
+            <img src="images/marketing-manager.png" alt="" />
+            <div class="name">Shahroz Iqbal</div>
+            <div class="desig">Marketing Manager</div>
+            <div class="about">
               Mr.Shahroz has 10 years of experience in a multinational firm.
               Besides effective marketing strategies, he has a strong grip on
               digital marketing, databases and generating new business leads for
@@ -257,26 +251,20 @@
             </div>
           </div>
           <div class="team" data-aos="zoom-in">
-            <img src="images/sales-manager.png" alt="" data-aos="ease-out" />
-            <div class="name" data-aos="fade-up">Mahad Abrar</div>
-            <div class="desig" data-aos="fade-up">Sales Manager</div>
-            <div class="about" data-aos="fade-up">
+            <img src="images/sales-manager.png" alt="" />
+            <div class="name">Mahad Abrar</div>
+            <div class="desig">Sales Manager</div>
+            <div class="about">
               Graduated from Philippines School of Science and Business
               Administration, Mr. Mahad has served abroad in the field of sales
               and marketing from the past 6 years.
             </div>
           </div>
           <div class="team" data-aos="zoom-in">
-            <img
-              src="images/tax-finance-manager.png"
-              alt=""
-              data-aos="ease-out"
-            />
-            <div class="name" data-aos="fade-up">Ahsan Waseem Dar</div>
-            <div class="desig" data-aos="fade-up">
-              Finanace And Taxation Manager
-            </div>
-            <div class="about" data-aos="fade-up">
+            <img src="images/tax-finance-manager.png" alt="" />
+            <div class="name">Ahsan Waseem Dar</div>
+            <div class="desig">Finanace And Taxation Manager</div>
+            <div class="about">
               Mr. Ahsan is authorized Federal Board of Revenue Income tax
               practitioner and has a diverse portfolio and 7 years’ working
               experience in the national and multinational companies in
@@ -290,63 +278,55 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img
-            src="images/footer-logo.png"
-            class="footer-logo"
-            data-aos="fade-up"
-          />
-          <p data-aos="fade-up">
+          <img src="images/footer-logo.png" class="footer-logo" />
+          <p>
             Group of expert investment advisors, consultants and sales
             executives insuring profit and leagal compliance.
           </p>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Office
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
-          <p data-aos="fade-up">1st Floor, Zamzam Arcade, Plaza 1-A</p>
-          <p data-aos="fade-up">Street # 39, Alia Market, G-13/2, Islamabad</p>
-          <p class="email-id" data-aos="fade-up">info@regalmarketing.com.pk</p>
-          <h4 data-aos="fade-up">+92 - 334 9000007</h4>
+          <p>1st Floor, Zamzam Arcade, Plaza 1-A</p>
+          <p>Street # 39, Alia Market, G-13/2, Islamabad</p>
+          <p class="email-id">info@regalmarketing.com.pk</p>
+          <h4>+92 - 334 9000007</h4>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Links
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
           <ul>
-            <li data-aos="fade-up"><a href="home.html">Home</a></li>
-            <li data-aos="fade-up"><a href="about.html">About</a></li>
-            <li data-aos="fade-up"><a href="projects.html">Projects</a></li>
-            <li data-aos="fade-up">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li>
               <a href="product&services.html">Products & Services</a>
             </li>
-            <li data-aos="fade-up">
+            <li>
               <a href="business-insights.html">Business Insights</a>
             </li>
-            <li data-aos="fade-up"><a href="videos.html">Videos</a></li>
-            <li data-aos="fade-up"><a href="">Careers</a></li>
-            <li data-aos="fade-up"><a href="contact.html">Contact</a></li>
+            <li><a href="videos.html">Videos</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Newsletter
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
-          <form class="footer-form" data-aos="zoom-in">
-            <i class="far fa-envelope" data-aos="fade-right"></i>
-            <input
-              type="email"
-              placeholder="Enter you email"
-              data-aos="fade-up"
-            />
+          <form class="footer-form">
+            <i class="far fa-envelope"></i>
+            <input type="email" placeholder="Enter you email" />
             <button type="submit">
-              <i class="fas fa-arrow-right" data-aos="fade-left"></i>
+              <i class="fas fa-arrow-right"></i>
             </button>
           </form>
-          <div class="social-icons" data-aos="fade-up">
+          <div class="social-icons">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-whatsapp"></i>
@@ -354,8 +334,8 @@
           </div>
         </div>
       </div>
-      <hr data-aos="zoom-in" data-aos-offset="40" />
-      <p class="copyright" data-aos="zoom-in" data-aos-offset="50">
+      <hr />
+      <p class="copyright">
         Copyright © 2022 Regal Marketing Pvt. Ltd | Powered by Regal Marketing
         Pvt. Ltd
       </p>
