--- a/blogs/designing-your-house.html
+++ b/blogs/designing-your-house.html
@@ -31,28 +31,28 @@
   <body>
     <header
       style="
-        background-image: url('../images/blog/golden-investment-opportunity.jpg');
-        height: 600px;
+        background-image: url('../images/blog/advantages-of-investment-in-real-estate.jpg');
       "
     >
-      <nav id="navbar">
+      <nav class="sticky">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
           <i class="fas fa-bars" onclick="showMenu()"></i>
         </label>
-        <a href="../home.html"
-          ><img
-            src="../images/logo-secondary.png"
+        <a href="../home.html">
+          <img
+            src="../images/logo.png"
             id="logo"
             class="logo"
             data-aos="zoom-out"
-        /></a>
+          />
+        </a>
         <ul id="menu">
           <li data-aos="zoom-out">
             <a href="../about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="projects.html">Projects</a>
+            <a href="../projects.html">Projects</a>
             <i
               class="fa fa-angle-down"
               style="margin: 5px; cursor: pointer"
@@ -91,15 +91,25 @@
             <a href="../products&services.html">Products & Services</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="../business-insights.html">Business Insights</a>
+            <a href="../business-insights.html" style="color: #f9ae41"
+              >Business Insights</a
+            >
           </li>
-          <li data-aos="zoom-out"><a href="../videos.html">Videos</a></li>
+          <li data-aos="zoom-out">
+            <a href="../videos.html">Videos</a>
+          </li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
           <li data-aos="zoom-out">
             <a href="../contact.html">Contact</a>
           </li>
         </ul>
       </nav>
+      <div class="search">
+        <h1>Regal Marketing</h1>
+        <p>
+          Here you go We are deals in all Society you can find all societies
+        </p>
+      </div>
     </header>
 
     <div class="single-project">
