--- a/projects/blue-world-sports-valley-islamabad.html
+++ b/projects/blue-world-sports-valley-islamabad.html
@@ -32,27 +32,27 @@
     <header
       style="
         background-image: url('../images/project/sports-valley/sports-valley-cover.jpg');
-        height: 600px;
       "
     >
-      <nav id="navbar">
+      <nav class="sticky">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
           <i class="fas fa-bars" onclick="showMenu()"></i>
         </label>
-        <a href="../home.html"
-          ><img
-            src="../images/logo-secondary.png"
+        <a href="../home.html">
+          <img
+            src="../images/logo.png"
             id="logo"
             class="logo"
             data-aos="zoom-out"
-        /></a>
+          />
+        </a>
         <ul id="menu">
           <li data-aos="zoom-out">
             <a href="../about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="projects.html">Projects</a>
+            <a href="../projects.html" style="color: #f9ae41">Projects</a>
             <i
               class="fa fa-angle-down"
               style="margin: 5px; cursor: pointer"
@@ -88,17 +88,23 @@
             </div>
           </div>
           <li data-aos="zoom-out">
-            <a href="products&services.html">Products & Services</a>
+            <a href="../products&services.html">Products & Services</a>
           </li>
-          <li data-aos="zoom-out"><a href="../business-insights.html">Business Insights</a></li>
-          <li data-aos="zoom-out"><a href="../videos.html">Videos</a></li>
+          <li data-aos="zoom-out">
+            <a href="../business-insights.html">Business Insights</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="../videos.html">Videos</a>
+          </li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
           <li data-aos="zoom-out">
             <a href="../contact.html">Contact</a>
           </li>
         </ul>
       </nav>
+      <div class="search">
     </header>
+    
 
     <div class="single-project">
       <div class="project-box">
