Final Touch in website

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header style="background-image: url('images/new-header-2.png')">
+    <header style="background-image: url('images/about-cover.jpg')">
       <nav class="sticky">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
@@ -86,15 +86,12 @@
             <a href="business-insights.html">Business Insights</a>
           </li>
           <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
-          <li data-aos="zoom-out"><a href="">Careers</a></li>
+          <li data-aos="zoom-out"><a href="career.html">Careers</a></li>
           <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="search">
-        <h1>Regal Marketing</h1>
-        <p>
-          Here you go We are deals in all Society you can find all societies
-        </p>
+        <h1>About Regal</h1>
       </div>
     </header>
 
@@ -103,18 +100,13 @@
       <div class="container">
         <h1 class="section-heading"><span>Who</span> we Are</h1>
         <p>Are you informed? More news more often move closer to the world</p>
-        <div class="container flex items-center">
-          <div class="flex-1">
-            <img
-              class="about-me-img"
-              src="images/about-us.png"
-              alt=""
-              data-aos="zoom-in"
-            />
+        <div class="about-container">
+          <div class="about-img">
+            <img src="images/about.jpg" alt="" />
           </div>
-          <div class="flex-1">
-            <h1 class="news-title">WE HAVE MORE THAN 7 YEARS OF EXPERIENCE</h1>
-            <p class="news-body">
+          <div class="about-text">
+            <h1>WE HAVE MORE THAN 7 YEARS OF EXPERIENCE</h1>
+            <p>
               Regal Marketing Network is among the fastest-growing marketing
               network around the world having its offices in many cities of
               Pakistan and also worldwide agents. The company deals in all
@@ -310,7 +302,7 @@
               <a href="business-insights.html">Business Insights</a>
             </li>
             <li><a href="videos.html">Videos</a></li>
-            <li><a href="">Careers</a></li>
+            <li><a href="career.html">Careers</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
