--- a/career.html
+++ b/career.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <title>Regal Marketing | Products & Services</title>
+    <title>Regal Marketing | About</title>
 
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header style="background-image: url('images/new-header-2.png')">
+    <header style="background-image: url('images/career-cover.jpg')">
       <nav class="sticky">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
@@ -80,112 +80,27 @@
             </div>
           </div>
           <li data-aos="zoom-out">
-            <a href="products&services.html" style="color: #f9ae41"
-              >Products & Services</a
-            >
+            <a href="products&services.html">Products & Services</a>
           </li>
           <li data-aos="zoom-out">
             <a href="business-insights.html">Business Insights</a>
           </li>
           <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
-          <li data-aos="zoom-out"><a href="career.html">Careers</a></li>
           <li data-aos="zoom-out">
-            <a href="contact.html">Contact</a>
+            <a href="career.html" style="color: #f9ae41">Careers</a>
           </li>
+          <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="search">
-        <h1>Products & Services</h1>
+        <h1>Careers</h1>
       </div>
     </header>
 
-    <!-- Our Product Section -->
-    <section class="products">
+    <!--About Section-->
+    <section class="career">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>Featured</span> Products
-        </h1>
-        <p data-aos="fade-up">
-          Standing close to our Customers, as we are ready to serve you with
-          improved Solutions
-        </p>
-        <div class="card-wrapper">
-          <div
-            class="card"
-            data-aos="zoom-in"
-            onclick="location.href = 'products/regal-emporium.html'"
-          >
-            <h2>Regal Emporium</h2>
-            <p>
-              Regal Emporium Located in the heart of Islamabad, Regal Emporium
-              is one of the absolute and extravagant commercial projects in the
-              commercial downtown of Park View City Islamabad.
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Construction Solutions</h2>
-            <p>
-              Trade your assets with us. You might be able to build a larger and
-              more valuable property than you could have on each parcel
-              separately.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Our Service Section -->
-    <section class="services" style="background: #f2f2f2">
-      <div class="container">
-        <h1 class="section-heading" style="color: #161616">
-          <span>We are Prov</span>iding Solutions
-        </h1>
-        <p style="color: #898989">
-          Standing close to our Customers, as we are ready to serve you with
-          improved Solutions
-        </p>
-        <div class="card-wrapper">
-          <div class="card" data-aos="zoom-in">
-            <div class="service-img">
-              <i class="fab fa-whatsapp"></i>
-            </div>
-            <!-- <img src="images/asset-management.png" alt="" data-aos="ease-out" /> -->
-            <h2>Asset Management</h2>
-            <p>
-              Managing workspaces, retail, residential or industrial property,
-              efficiently and cost-effectively, handling the loops and enhancing
-              the worth.
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <div class="service-img">
-              <i class="fab fa-whatsapp"></i>
-            </div>
-            <!-- <img
-              src="images/merge-your-property.png"
-              alt=""
-              data-aos="ease-out"
-            /> -->
-            <h2>Merge Your Property</h2>
-            <p>
-              Trade your assets with us. You might be able to build a larger and
-              more valuable property than you could have on each parcel
-              separately.
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <div class="service-img">
-              <i class="fab fa-whatsapp"></i>
-            </div>
-            <!-- <img src="images/expert-opinions.png" alt="" data-aos="ease-out" /> -->
-            <h2>Monitoring Services</h2>
-            <p>
-              It is a base line package which focus on reducing the recurring
-              expenditure of monitoring and surveillance of any indoor or
-              outdoor premises.
-            </p>
-          </div>
-        </div>
+        <h1 class="section-heading">Coming Soon...</h1>
       </div>
     </section>
 
@@ -218,7 +133,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li>
-              <a href="products&services.html">Products & Services</a>
+              <a href="product&services.html">Products & Services</a>
             </li>
             <li>
               <a href="business-insights.html">Business Insights</a>
