--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
           <div class="next nav-btn">></div>
         </div>
       </div> -->
-      <nav class="sticky">
+      <nav class="sticky" id="navbar">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
           <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -98,7 +98,7 @@
             <a href="business-insights.html">Business Insights</a>
           </li>
           <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
-          <li data-aos="zoom-out"><a href="">Careers</a></li>
+          <li data-aos="zoom-out"><a href="career.html">Careers</a></li>
           <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -115,15 +115,15 @@
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading"><span>About</span> Regal</h1>
-        <p>Your No. 1 Property Advisory in the Town</p>
-        <div class="container flex items-center">
-          <div class="flex-1">
-            <img class="about-me-img" src="images/about-us.png" alt="" />
+        <h1 class="section-heading"><span>Who</span> we Are</h1>
+        <p>Are you informed? More news more often move closer to the world</p>
+        <div class="about-container">
+          <div class="about-img">
+            <img src="images/about.jpg" alt="" />
           </div>
-          <div class="flex-1">
-            <h1 class="news-title">WE HAVE MORE THAN 7 YEARS OF EXPERIENCE</h1>
-            <p class="news-body">
+          <div class="about-text">
+            <h1>WE HAVE MORE THAN 7 YEARS OF EXPERIENCE</h1>
+            <p>
               Regal Marketing Network is among the fastest-growing marketing
               network around the world having its offices in many cities of
               Pakistan and also worldwide agents. The company deals in all
@@ -211,7 +211,7 @@
           <div
             class="card"
             data-aos="zoom-in"
-            onclick="location.href='projects/regal-emporium.html'"
+            onclick="location.href='products/regal-emporium.html'"
           >
             <h2>Regal Emporium</h2>
             <p>
@@ -290,17 +290,17 @@
       <div class="container">
         <h1 class="section-heading"><span>News</span> Reels</h1>
         <p>Are you informed? More news more often move closer to the world</p>
-        <div class="container flex items-center">
-          <div class="flex-1">
-            <img class="about-me-img" src="images/news.png" alt="" />
+        <div class="about-container">
+          <div class="about-img">
+            <img src="images/news.png" alt="" />
           </div>
-          <div class="flex-1">
+          <div class="about-text">
             <h3>Offices | 02 August 2022</h3>
-            <h1 class="news-title">
+            <h1>
               3564 low budget living units completed under Naya Pakistan Housing
               Program
             </h1>
-            <p class="news-body">
+            <p>
               Some 3,564 low-cost housing units from the Workers' Welfare Fund
               (WWF) and 18,499 from the Akhuwat Foundation have been completed
               under the Naya Pakistan Housing Scheme (NPHP), according to
@@ -590,7 +590,7 @@
               <a href="business-insights.html">Business Insights</a>
             </li>
             <li><a href="videos.html">Videos</a></li>
-            <li><a href="">Careers</a></li>
+            <li><a href="career.html">Careers</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
