--- a/products/regal-emporium.html
+++ b/products/regal-emporium.html
@@ -31,7 +31,7 @@
   <body>
     <header
       style="
-        background-image: url('../images/project/regal-emporium/regal-emporium-cover.jpg');
+        background-image: url('../images/project/thumbnail/regal-emporium.jpg');
       "
     >
       <nav class="sticky">
@@ -52,7 +52,7 @@
             <a href="../about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="../projects.html" style="color: #f9ae41">Projects</a>
+            <a href="../projects.html">Projects</a>
             <i
               class="fa fa-angle-down"
               style="margin: 5px; cursor: pointer"
@@ -88,7 +88,9 @@
             </div>
           </div>
           <li data-aos="zoom-out">
-            <a href="../products&services.html">Products & Services</a>
+            <a href="../products&services.html" style="color: #f9ae41"
+              >Products & Services</a
+            >
           </li>
           <li data-aos="zoom-out">
             <a href="../business-insights.html">Business Insights</a>
@@ -96,7 +98,7 @@
           <li data-aos="zoom-out">
             <a href="../videos.html">Videos</a>
           </li>
-          <li data-aos="zoom-out"><a href="">Careers</a></li>
+          <li data-aos="zoom-out"><a href="../career.html">Careers</a></li>
           <li data-aos="zoom-out">
             <a href="../contact.html">Contact</a>
           </li>
