--- a/projects.html
+++ b/projects.html
@@ -86,17 +86,14 @@
             <a href="business-insights.html">Business Insights</a>
           </li>
           <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
-          <li data-aos="zoom-out"><a href="">Careers</a></li>
+          <li data-aos="zoom-out"><a href="career.html">Careers</a></li>
           <li data-aos="zoom-out">
             <a href="contact.html">Contact</a>
           </li>
         </ul>
       </nav>
       <div class="search">
-        <h1>Regal Marketing</h1>
-        <p>
-          Here you go We are deals in all Society you can find all societies
-        </p>
+        <h1>Projects</h1>
       </div>
     </header>
 
@@ -258,7 +255,7 @@
               <a href="business-insights.html">Business Insights</a>
             </li>
             <li><a href="videos.html">Videos</a></li>
-            <li><a href="">Careers</a></li>
+            <li><a href="career.html">Careers</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
