--- a/business-insights.html
+++ b/business-insights.html
@@ -88,46 +88,45 @@
             >
           </li>
           <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
-          <li data-aos="zoom-out"><a href="">Careers</a></li>
+          <li data-aos="zoom-out"><a href="career.html">Careers</a></li>
           <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="search">
-        <h1>Regal Marketing</h1>
-        <p>
-          Here you go We are deals in all Society you can find all societies
-        </p>
+        <h1>Business Insights</h1>
       </div>
     </header>
 
     <section class="business-insights">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>Business</span> Insights
-        </h1>
-        <p data-aos="fade-up">
+        <h1 class="section-heading"><span>Business</span> Insights</h1>
+        <p>
           Let's see the world of real estate from a different perspective
           transforming from commitments to <br />
           inovations, summed up in our Regal Blogs, Researches and News.
         </p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
-            <h2 data-aos="fade-up">Research</h2>
-            <p data-aos="fade-up">
+            <h2>Research</h2>
+            <p>
               Apart from the real estate world, Regal Research cover diverse
               topic like latest market trends, taxations and economic analysis.
             </p>
           </div>
-          <div class="card" data-aos="zoom-in">
-            <h2 data-aos="fade-up">The Regal Blog</h2>
-            <p data-aos="fade-up">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href = 'blogs.html'"
+          >
+            <h2>The Regal Blog</h2>
+            <p>
               We bring latest news and market outlook along with experts
               opinions and guidelines.
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
-            <h2 data-aos="fade-up">Regal News</h2>
-            <p data-aos="fade-up">
+            <h2>Regal News</h2>
+            <p>
               Not worthy information latest events and market trends are all
               here.
             </p>
@@ -145,15 +144,13 @@
         background-size: cover;
       "
     >
-      <h1 data-aos="fade-bottom">Research</h1>
+      <h1>Research</h1>
       <div class="bar-line"></div>
-      <p data-aos="fade-bottom">
+      <p>
         Apart from the real estate world, Regal Research cover diverse topic
         like latest market trends, taxations and economic analysis.
       </p>
-      <button class="btn btn-primary" data-aos="fade-bottom">
-        VIEW ALL RESEARCH
-      </button>
+      <button class="btn btn-primary">VIEW ALL RESEARCH</button>
     </section>
 
     <section class="research-grid">
@@ -188,25 +185,20 @@
         background-size: cover;
       "
     >
-      <h1 data-aos="fade-bottom">The Regal Blog</h1>
+      <h1>The Regal Blog</h1>
       <div class="bar-line"></div>
-      <p data-aos="fade-bottom">
+      <p>
         We bring latest news and market outlook along with experts opinions and
         guidelines.
       </p>
-      <button
-        class="btn btn-primary"
-        data-aos="fade-bottom"
-        onclick="location.href = 'blogs.html';"
-      >
+      <button class="btn btn-primary" onclick="location.href = 'blogs.html';">
         VIEW ALL BLOGS
       </button>
     </section>
 
     <!-- Blogs Grid Section -->
 
-    <!--Our Blog Section-->
-    <section class="blog-grid" data-aos="fade-up">
+    <section class="blog-grid">
       <div class="container">
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
@@ -215,19 +207,16 @@
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
-                <h1 data-aos="fade-up">
-                  Advantages of Investment in Real Estate
-                </h1>
+                <h1>Advantages of Investment in Real Estate</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 Real estate investments have the muscle to unlock endless
                 opportunities ...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
                 class="read-more"
-                data-aos="fade-up"
                 >Read More</a
               >
             </div>
@@ -238,16 +227,11 @@
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
-                <h1 data-aos="fade-up">Early Bird Balloting</h1>
+                <h1>Early Bird Balloting</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
-                New metro city Gujar Khan Files bookings are now open ...
-              </p>
-              <a
-                href="blogs/early-bird-balloting.html"
-                class="read-more"
-                data-aos="fade-up"
+              <span>August 29, 2022</span>
+              <p>New metro city Gujar Khan Files bookings are now open ...</p>
+              <a href="blogs/early-bird-balloting.html" class="read-more"
                 >Read More</a
               >
             </div>
@@ -258,17 +242,16 @@
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
-                <h1 data-aos="fade-up">A Golden Investment Opportunity</h1>
+                <h1>A Golden Investment Opportunity</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 After getting huge accomplishments in New Metro City Kharian and
                 ...
               </p>
               <a
                 href="blogs/a-golden-investment-opportunity.html"
                 class="read-more"
-                data-aos="fade-up"
                 >Read More</a
               >
             </div>
@@ -279,19 +262,16 @@
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
-                <h1 data-aos="fade-up">
-                  Most Profitable Small Business Ideas in Pakistan
-                </h1>
+                <h1>Most Profitable Small Business Ideas in Pakistan</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 Real estate investments have the muscle to unlock endless
                 opportunities ...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
                 class="read-more"
-                data-aos="fade-up"
                 >Read More</a
               >
             </div>
@@ -302,17 +282,16 @@
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
-                <h1 data-aos="fade-up">Technology in Real Estate</h1>
+                <h1>Technology in Real Estate</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 Real estate investments have the muscle to unlock endless
                 opportunities ...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
                 class="read-more"
-                data-aos="fade-up"
                 >Read More</a
               >
             </div>
@@ -323,16 +302,11 @@
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
-                <h1 data-aos="fade-up">Ways to Increase Your Property</h1>
+                <h1>Ways to Increase Your Property</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
-                New metro city Gujar Khan Files bookings are now open ...
-              </p>
-              <a
-                href="blogs/early-bird-balloting.html"
-                class="read-more"
-                data-aos="fade-up"
+              <span>August 29, 2022</span>
+              <p>New metro city Gujar Khan Files bookings are now open ...</p>
+              <a href="blogs/early-bird-balloting.html" class="read-more"
                 >Read More</a
               >
             </div>
@@ -347,17 +321,14 @@
             </div>
             <div class="card-content">
               <a href="blogs/designing-your-house.html">
-                <h1 data-aos="fade-up">Designing your House</h1>
+                <h1>Designing your House</h1>
               </a>
-              <span data-aos="fade-up">September 15, 2022</span>
-              <p data-aos="fade-up">
+              <span>September 15, 2022</span>
+              <p>
                 Planning and designing your personal home is an incredible
                 prospect. ...
               </p>
-              <a
-                href="blogs/designing-your-house.html"
-                class="read-more"
-                data-aos="fade-up"
+              <a href="blogs/designing-your-house.html" class="read-more"
                 >Read More</a
               >
             </div>
@@ -368,17 +339,16 @@
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
-                <h1 data-aos="fade-up">Commercial vs Residential</h1>
+                <h1>Commercial vs Residential</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 Real estate investments have the muscle to unlock endless
                 opportunities ...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
                 class="read-more"
-                data-aos="fade-up"
                 >Read More</a
               >
             </div>
@@ -447,63 +417,55 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img
-            src="images/footer-logo.png"
-            class="footer-logo"
-            data-aos="fade-up"
-          />
-          <p data-aos="fade-up">
+          <img src="images/footer-logo.png" class="footer-logo" />
+          <p>
             Group of expert investment advisors, consultants and sales
             executives insuring profit and leagal compliance.
           </p>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Office
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
-          <p data-aos="fade-up">1st Floor, Zamzam Arcade, Plaza 1-A</p>
-          <p data-aos="fade-up">Street # 39, Alia Market, G-13/2, Islamabad</p>
-          <p class="email-id" data-aos="fade-up">info@regalmarketing.com.pk</p>
-          <h4 data-aos="fade-up">+92 - 334 9000007</h4>
+          <p>1st Floor, Zamzam Arcade, Plaza 1-A</p>
+          <p>Street # 39, Alia Market, G-13/2, Islamabad</p>
+          <p class="email-id">info@regalmarketing.com.pk</p>
+          <h4>+92 - 334 9000007</h4>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Links
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
           <ul>
-            <li data-aos="fade-up"><a href="home.html">Home</a></li>
-            <li data-aos="fade-up"><a href="about.html">About</a></li>
-            <li data-aos="fade-up"><a href="projects.html">Projects</a></li>
-            <li data-aos="fade-up">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li>
               <a href="product&services.html">Products & Services</a>
             </li>
-            <li data-aos="fade-up">
+            <li>
               <a href="business-insights.html">Business Insights</a>
             </li>
-            <li data-aos="fade-up"><a href="videos.html">Videos</a></li>
-            <li data-aos="fade-up"><a href="">Careers</a></li>
-            <li data-aos="fade-up"><a href="contact.html">Contact</a></li>
+            <li><a href="videos.html">Videos</a></li>
+            <li><a href="career.html">Careers</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Newsletter
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
-          <form class="footer-form" data-aos="zoom-in">
-            <i class="far fa-envelope" data-aos="fade-right"></i>
-            <input
-              type="email"
-              placeholder="Enter you email"
-              data-aos="fade-up"
-            />
+          <form class="footer-form">
+            <i class="far fa-envelope"></i>
+            <input type="email" placeholder="Enter you email" />
             <button type="submit">
-              <i class="fas fa-arrow-right" data-aos="fade-left"></i>
+              <i class="fas fa-arrow-right"></i>
             </button>
           </form>
-          <div class="social-icons" data-aos="fade-up">
+          <div class="social-icons">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-whatsapp"></i>
@@ -511,8 +473,8 @@
           </div>
         </div>
       </div>
-      <hr data-aos="zoom-in" data-aos-offset="40" />
-      <p class="copyright" data-aos="zoom-in" data-aos-offset="50">
+      <hr />
+      <p class="copyright">
         Copyright © 2022 Regal Marketing Pvt. Ltd | Powered by Regal Marketing
         Pvt. Ltd
       </p>
